// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`App component renders loading message when not loaded 1`] = `
<div>
  <Header>
    Reason React Hacker News
  </Header>
  Loading...
</div>
`;

exports[`App component renders stories 1`] = `
<div>
  <Header>
    Reason React Hacker News
  </Header>
  <ul>
    <li>
      <a
        href="apple.com"
      >
        New phones
      </a>
    </li>
  </ul>
</div>
`;
